queue changed